dnl $Id$
dnl
dnl Process this file with GNU autoconf(1) to produce a configure script.
dnl
UC_INIT(nctest)

UC_DEFAULT(CFLAGS, -O)
UC_DEFAULT(CPP_OLD_FILLVALUES,)
UC_DEFAULT(CPPFLAGS, -DNDEBUG)
UC_ENSURE(CPPFLAGS, -DHDF)
UC_DEFAULT(HDF_INC, -I/hdf/home/chouck/hdf/33/include)
UC_DEFAULT(HDF_LIB, -I/hdf/home/chouck/hdf/33/lib/libdf.a)
UC_DEFAULT(FFLAGS,)
UC_DEFAULT(LEX, lex)
UC_DEFAULT(YACC, yacc)
UC_DEFAULT(XDRFILE, xdrposix)
UC_PREFIX(..)

AC_PROG_RANLIB
UC_PROG_CC
UC_PROG_CPP
UC_PROG_FC
UC_PROG_NEQN
UC_PROG_TBL
UC_PROG_INSTALL
UC_PROG_AR

UL_XDR
UL_PROTOTYPES
UL_CONST
UL_VARIADIC_FUNCTIONS
UL_STRERROR

UC_OS
UC_FTPDIR(pub/sdm)
UC_VERSION

UC_CHECK_MISSING

AC_OUTPUT( \
    Makefile \
    port/Makefile port/master.mk \
    xdr/Makefile \
    libsrc/Makefile \
    fortran/Makefile \
    ncgen/Makefile \
    ncdump/Makefile \
    nctest/Makefile \
    doc/Makefile \
    )

UC_TERM( \
    Makefile \
    port/Makefile \
    xdr/Makefile \
    libsrc/Makefile \
    fortran/Makefile \
    ncgen/Makefile \
    ncdump/Makefile \
    nctest/Makefile \
    doc/Makefile \
    )
