dnl $Id$
dnl
dnl Process this file with GNU autoconf(1) to produce a configure script.
dnl
UC_INIT(nctest)

UL_FILLVALUES

UC_DEFAULT(CFLAGS, -O)
UC_DEFAULT(CPPFLAGS, -DNDEBUG)
UC_ENSURE(CPPFLAGS, -DHDF)
UC_DEFAULT(HDF_INC, -I/hdf/home/chouck/hdf/33/include)
UC_DEFAULT(HDF_LIB, /hdf/home/chouck/hdf/33/lib/libdf.a)
UC_DEFAULT(JPEG_LIB, /hdf/home/chouck/hdf/33/jpeg/libjpeg.a)
UC_DEFAULT(FFLAGS,)
UC_DEFAULT(LEX, lex)
UC_DEFAULT(YACC, yacc)
UC_DEFAULT(XDRFILE, xdrposix)
UC_PREFIX(..)

UC_OS
UC_MACHINE
UC_PROG_CC
UC_PROG_WHICH
if test "$OS" = ultrix && test "$MACHINE" = vax \
    && test `$WHICH "$CC"` = /bin/cc; then
  echo "changing C compiler to \`vcc' because \`cc' floating-point is broken"
  CC=vcc
fi

UC_PROG_CPP
UC_PROG_FC
UC_PROG_NEQN
UC_PROG_TBL
UC_PROG_INSTALL
UC_PROG_AR
UC_PROG_MAKEINFO

UL_SWAP
UL_NETLONG
UL_XDR
UL_PROTOTYPES
UL_CONST
UL_VARIADIC_FUNCTIONS
UL_STRERROR

UC_FTPDIR(pub/sdm)
UC_VERSION

UC_CHECK_MISSING

UC_FINISH( \
    Makefile \
    xdr/Makefile \
    libsrc/Makefile \
    fortran/Makefile \
    ncgen/Makefile \
    ncdump/Makefile \
    dumper/Makefile \
    nctest/Makefile \
    doc/Makefile \
    pablo/Makefile \
    )
