cmake_minimum_required (VERSION 3.12)
project (HDF4Examples_JAVA)

#-----------------------------------------------------------------------------
# Build the hdf examples
#-----------------------------------------------------------------------------
add_subdirectory (exAN)
add_subdirectory (exGR)
add_subdirectory (exVD)
add_subdirectory (exSD)
